--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 
                             <div class="row g-4">
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                                    <a class="btn" href="https://htmlcodex.com">
-                                        <img src="img/google-play-coming-soon.png" alt="Google Play" />
+                                    <a class="btn" href="#">
+                                        <img src="img/google-play-coming-soon.png" alt="Google Play" class="store-img"/>
                                     </a>
                                 </div>
                                 <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                                     <a class="btn" href="https://htmlcodex.com">
-                                        <img src="img/app-store.png" alt="App Store" />
+                                        <img src="img/app-store.png" alt="App Store" class="store-img"/>
                                     </a>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h4 class="text-white mb-4">Quick Link</h4>
-                        <a class="btn btn-link" href="privacy-policy.pdf">Privacy Policy</a>
+                        <a class="btn btn-link" href="privacy-policy.html">Privacy Policy</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">DigitalFun Online</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">uopensail</a>, All Right Reserved. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
 							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
