--- a/index.html
+++ b/index.html
@@ -1,151 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>MadEraser- AI Remove Object</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta content="" name="keywords" />
+    <meta content="" name="description" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/favicon.ico" rel="icon" />
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Jost:wght@500;600;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Jost:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-</head>
+    <link href="css/style.css" rel="stylesheet" />
+  </head>
 
-<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
+  <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="51">
     <div class="container-xxl bg-white p-0">
-        <!-- Spinner Start -->
-        <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-            <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
+      <!-- Spinner Start -->
+      <div
+        id="spinner"
+        class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
+      >
+        <div
+          class="spinner-grow text-primary"
+          style="width: 3rem; height: 3rem"
+          role="status"
+        >
+          <span class="sr-only">Loading...</span>
         </div>
-        <!-- Spinner End -->
+      </div>
+      <!-- Spinner End -->
 
-
-        <!-- Navbar & Hero Start -->
-        <div class="container-xxl position-relative p-0" id="home">
-            <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-                <a href="" class="navbar-brand p-0">
-                    <h1 class="m-0">MadEraser</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="fa fa-bars"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav mx-auto py-0">
-                        <a href="#home" class="nav-item nav-link active">Home</a>
-                        <a href="#contact" class="nav-item nav-link">Contact</a>
-                    </div>
-                </div>
-            </nav>
-
-            <div class="container-xxl bg-primary hero-header">
-                <div class="container px-lg-5">
-                    <div class="row g-5">
-                        <div class="col-lg-8 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated slideInDown">Welcome to the lumber valley, build your empire, build your story </h1>
-                            <h5 class="text-white mb-4 animated slideInDown">Welcome to the lumber valley, build your empire, build your story </h5>
-
-                            <h5 class="text-white mb-4 animated slideInDown">Welcome to the lumber valley, build your empire, build your story </h5>
-                            <h5 class="text-black  ">Welcome to the lumber valley, build your empire, build your story </h5>
-
-                            <div class="row g-4">
-                                <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
-                                    <a class="btn" href="#">
-                                        <img src="img/google-play-coming-soon.png" alt="Google Play" class="store-img"/>
-                                    </a>
-                                </div>
-                                <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                                    <a class="btn" href="https://htmlcodex.com">
-                                        <img src="img/app-store.png" alt="App Store" class="store-img"/>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp" data-wow-delay="0.3s">
-                            <div class="owl-carousel screenshot-carousel">
-                                <img class="img-fluid" src="img/screenshot-1.webp" alt="">
-                                <img class="img-fluid" src="img/screenshot-2.webp" alt="">
-                                <img class="img-fluid" src="img/screenshot-3.webp" alt="">
-                                <img class="img-fluid" src="img/screenshot-4.webp" alt="">
-                                <img class="img-fluid" src="img/screenshot-5.webp" alt="">
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <!-- Navbar & Hero Start -->
+      <div class="container-xxl position-relative p-0" id="home">
+        <nav
+          class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
+        >
+          <a href="" class="navbar-brand p-0">
+            <h1 class="m-0">MadEraser</h1>
+            <!-- <img src="img/logo.png" alt="Logo"> -->
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+          >
+            <span class="fa fa-bars"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav mx-auto py-0">
+              <a href="#home" class="nav-item nav-link active">Home</a>
+              <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
+          </div>
+        </nav>
+
+        <div class="container-xxl bg-primary hero-header">
+          <div class="container px-lg-5">
+            <div class="row g-5">
+              <div class="col-lg-8 text-center text-lg-start">
+                <h1 class="text-white mb-4 animated slideInDown">
+                  Easily remove objects and watermarks with AI-powered
+                  precision. 
+                </h1>
+
+                <p class="text-black mb-4 animated slideInDown">
+                  1.AI-Powered Editing: Automatically detect and remove unwanted
+                  objects and watermarks with advanced AI technology.
+                </p>
+
+                <p class="text-black mb-4 animated slideInDown">
+                  2.Remove Objects and Watermarks: Eliminate unwanted elements
+                  from your photos with precision.
+                </p>
+                <p class="text-black mb-4 animated slideInDown">
+                  3.Easy 3-Step Process: Just mark the area, preview, and
+                  save—editing has never been easier.
+                </p>
+                <p class="text-black mb-4 animated slideInDown">
+                  4.100% Privacy: Your images stay on your device, ensuring
+                  maximum privacy and security.
+                </p>
+                <p class="text-black mb-4 animated slideInDown">
+                  5.No Cloud Uploads: Edit your photos without any risk of them
+                  being stored or shared online.
+                </p>
+                <p class="text-black mb-4 animated slideInDown">
+                  6.Perfect for Everyone: Simple enough for beginners, powerful
+                  enough for professionals.
+                </p>
+                <div class="row g-4">
+                  <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
+                    <a class="btn" href="https://htmlcodex.com">
+                      <img
+                        src="img/app-store.png"
+                        alt="App Store"
+                        class="store-img"
+                      />
+                    </a>
+                  </div>
+                  <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                    <a class="btn" href="#">
+                      <img
+                        src="img/google-play-coming-soon.png"
+                        alt="Google Play"
+                        class="store-img"
+                      />
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div
+                class="col-lg-4 d-flex justify-content-center justify-content-lg-end wow fadeInUp"
+                data-wow-delay="0.3s"
+              >
+                <div class="owl-carousel screenshot-carousel">
+                  <img class="img-fluid" src="img/screenshot-1.webp" alt="" />
+                  <img class="img-fluid" src="img/screenshot-2.webp" alt="" />
+                  <img class="img-fluid" src="img/screenshot-3.webp" alt="" />
+                  <img class="img-fluid" src="img/screenshot-4.webp" alt="" />
+                  <img class="img-fluid" src="img/screenshot-5.webp" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- Navbar & Hero End -->
+      </div>
+      <!-- Navbar & Hero End -->
 
- 
- 
-
- 
- 
- 
- 
-
-        <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s" id="contact">
-            <div class="container py-5 px-lg-5">
-                <div class="row g-5">
-                    <div class="col-md-6 col-lg-3">
-                        <h4 class="text-white mb-4">Address</h4>
-                        <p><i class="fa fa-map-marker-alt me-3"></i>Pudong, Shanghai, China</p>
-                        <p><i class="fa fa-envelope me-3"></i>support@uopensail.com</p>
-                        <!--div class="d-flex pt-2">
+      <!-- Footer Start -->
+      <div
+        class="container-fluid bg-primary text-light footer wow fadeIn"
+        data-wow-delay="0.1s"
+        id="contact"
+      >
+        <div class="container py-5 px-lg-5">
+          <div class="row g-5">
+            <div class="col-md-6 col-lg-3">
+              <h4 class="text-white mb-4">Address</h4>
+              <p>
+                <i class="fa fa-map-marker-alt me-3"></i>Pudong, Shanghai, China
+              </p>
+              <p><i class="fa fa-envelope me-3"></i>support@uopensail.com</p>
+              <!--div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
                         </div-->
-                    </div>
-                    <div class="col-md-6 col-lg-3">
-                        <h4 class="text-white mb-4">Quick Link</h4>
-                        <a class="btn btn-link" href="privacy-policy.html">Privacy Policy</a>
-                    </div>
-                </div>
             </div>
-            <div class="container px-lg-5">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">uopensail</a>, All Right Reserved. 
-							
-							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-6 col-lg-3">
+              <h4 class="text-white mb-4">Quick Link</h4>
+              <a class="btn btn-link" href="privacy-policy.html"
+                >Privacy Policy</a
+              >
             </div>
+          </div>
         </div>
-        <!-- Footer End -->
+        <div class="container px-lg-5">
+          <div class="copyright">
+            <div class="row">
+              <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a class="border-bottom" href="#">uopensail</a>, All
+                Right Reserved.
 
+                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                Designed By
+                <a class="border-bottom" href="https://htmlcodex.com"
+                  >HTML Codex</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Footer End -->
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up text-white"></i></a>
+      <!-- Back to Top -->
+      <a href="#" class="btn btn-lg btn-lg-square back-to-top pt-2"
+        ><i class="bi bi-arrow-up text-white"></i
+      ></a>
     </div>
 
     <!-- JavaScript Libraries -->
@@ -159,6 +220,5 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
