--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </p>
                 <div class="row g-4">
                   <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                    <a class="btn" href="https://htmlcodex.com">
+                    <a class="btn" href="https://apps.apple.com/app/maderaser/id6664059132">
                       <img
                         src="img/app-store.png"
                         alt="App Store"
