--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8" />
     <title>MadEraser- AI Remove Object</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta content="AI photo editor, Remove objects, Watermark remover, Private editing, No cloud uploads, Image cleanup" name="keywords" />
+    <meta content="Easily remove objects, watermarks, and unwanted people from your photos with our app. Designed for privacy, your photos never leave your device—no cloud uploads, no risk. In just three simple steps, erase distractions and enhance your images like a pro. Our app offers a user-friendly experience, making it perfect for anyone who values both privacy and simplicity in photo editing. Download now to enjoy secure editing.
+
+    Features:
+    1.AI-Powered Editing: Automatically detect and remove unwanted objects and watermarks with advanced AI technology.
+    2.Remove Objects and Watermarks: Eliminate unwanted elements from your photos with precision.
+    3.Easy 3-Step Process: Just mark the area, preview, and save—editing has never been easier.
+    4.100% Privacy: Your images stay on your device, ensuring maximum privacy and security.
+    5.No Cloud Uploads: Edit your photos without any risk of them being stored or shared online.
+    6.Perfect for Everyone: Simple enough for beginners, powerful enough for professionals.
+    " name="description" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
@@ -89,32 +98,32 @@
                   Easily remove objects and watermarks with AI-powered
                   precision. 
                 </h1>
-
-                <p class="text-black mb-4 animated slideInDown">
-                  1.AI-Powered Editing: Automatically detect and remove unwanted
-                  objects and watermarks with advanced AI technology.
-                </p>
-
-                <p class="text-black mb-4 animated slideInDown">
-                  2.Remove Objects and Watermarks: Eliminate unwanted elements
-                  from your photos with precision.
-                </p>
-                <p class="text-black mb-4 animated slideInDown">
-                  3.Easy 3-Step Process: Just mark the area, preview, and
-                  save—editing has never been easier.
-                </p>
-                <p class="text-black mb-4 animated slideInDown">
-                  4.100% Privacy: Your images stay on your device, ensuring
-                  maximum privacy and security.
-                </p>
-                <p class="text-black mb-4 animated slideInDown">
-                  5.No Cloud Uploads: Edit your photos without any risk of them
-                  being stored or shared online.
-                </p>
-                <p class="text-black mb-4 animated slideInDown">
-                  6.Perfect for Everyone: Simple enough for beginners, powerful
-                  enough for professionals.
-                </p>
+                <ul class="text-black mb-4 animated slideInDown" style="line-height: 1.6; list-style: none; padding-left: 0;">
+                  <li class="d-flex align-items-start mb-3">
+                    <i class="bi bi-lightbulb-fill text-warning me-3"></i>
+                    <span>AI-Powered: Automatically remove unwanted objects and watermarks.</span>
+                  </li>
+                  <li class="d-flex align-items-start mb-3">
+                    <i class="bi bi-brush-fill text-success me-3"></i>
+                    <span>Precision Removal: Eliminate elements with ease.</span>
+                  </li>
+                  <li class="d-flex align-items-start mb-3">
+                    <i class="bi bi-check-circle-fill text-primary me-3"></i>
+                    <span>3 Easy Steps: Mark, preview, save.</span>
+                  </li>
+                  <li class="d-flex align-items-start mb-3">
+                    <i class="bi bi-shield-lock-fill text-danger me-3"></i>
+                    <span>100% Privacy: Your images stay on your device.</span>
+                  </li>
+                  <li class="d-flex align-items-start mb-3">
+                    <i class="bi bi-cloud-slash-fill text-info me-3"></i>
+                    <span>No Cloud: Edit without online storage.</span>
+                  </li>
+                  <li class="d-flex align-items-start mb-3">
+                    <i class="bi bi-person-check-fill text-secondary me-3"></i>
+                    <span>For Everyone: Simple and powerful.</span>
+                  </li>
+                </ul>
                 <div class="row g-4">
                   <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                     <a class="btn" href="https://apps.apple.com/app/maderaser/id6664059132">
