--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                   <img class="img-fluid" src="img/screenshot-3.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-4.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-5.webp" alt="" />
+                  <img class="img-fluid" src="img/screenshot-6.webp" alt="" />
+                  <img class="img-fluid" src="img/screenshot-7.webp" alt="" />
                 </div>
               </div>
             </div>
