--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
             </div>
           </div>
         </div>
-        <div class="container px-lg-5">
+        <div class="container px-lg-3">
           <div class="copyright">
             <div class="row">
-              <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                &copy; <a class="border-bottom" href="#">uopensail</a>, All
+              <div class="col-md-8 text-center text-md-start mb-3 mb-md-0">
+                &copy; <a class="border-bottom" href="#">uopensail.com</a>, All
                 Right Reserved.
-
+                <a href="https://beian.miit.gov.cn/" target="_blank" >沪ICP备2024092801号-1</a>
                 <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                 Designed By
                 <a class="border-bottom" href="https://htmlcodex.com"
