--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@
                 data-wow-delay="0.3s"
               >
                 <div class="owl-carousel screenshot-carousel">
-                  <img class="img-fluid" src="img/screenshot-1.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-2.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-3.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-4.webp" alt="" />
@@ -177,7 +176,7 @@
             <div class="col-md-6 col-lg-3">
               <h4 class="text-white mb-4">Address</h4>
               <p>
-                <i class="fa fa-map-marker-alt me-3"></i>Pudong, Shanghai, China
+                <i class="fa fa-map-marker-alt me-3"></i>1999 Beixing Highway, Sanxing Town, Chongming District, Shanghai, China
               </p>
               <p><i class="fa fa-envelope me-3"></i>support@uopensail.com</p>
               <!--div class="d-flex pt-2">
@@ -192,7 +191,11 @@
               <a class="btn btn-link" href="privacy-policy.html"
                 >Privacy Policy</a
               >
+              <a class="btn btn-link" href="terms-use.html"
+                >Terms Use</a
+              >
             </div>
+  
           </div>
         </div>
         <div class="container px-lg-3">
