--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>MadEraser- AI Remove Object</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="AI photo editor, Remove objects, Watermark remover, Private editing, No cloud uploads, Image cleanup" name="keywords" />
+    <meta content="AI photo editor, Remove objects,  Private editing, No cloud uploads, Image cleanup" name="keywords" />
     <meta content="Easily remove objects, watermarks, and unwanted people from your photos with our app. Designed for privacy, your photos never leave your device—no cloud uploads, no risk. In just three simple steps, erase distractions and enhance your images like a pro. Our app offers a user-friendly experience, making it perfect for anyone who values both privacy and simplicity in photo editing. Download now to enjoy secure editing.
 
     Features:
-    1.AI-Powered Editing: Automatically detect and remove unwanted objects and watermarks with advanced AI technology.
+    1.AI-Powered Editing: remove unwanted objects  with advanced AI technology.
     2.Remove Objects and Watermarks: Eliminate unwanted elements from your photos with precision.
     3.Easy 3-Step Process: Just mark the area, preview, and save—editing has never been easier.
     4.100% Privacy: Your images stay on your device, ensuring maximum privacy and security.
