--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
             <div class="row g-5">
               <div class="col-lg-8 text-center text-lg-start">
                 <h1 class="text-white mb-4 animated slideInDown">
-                  Easily remove objects and watermarks with AI-powered
+                  Easily remove objects  with AI-powered
                   precision. 
                 </h1>
                 <ul class="text-black mb-4 animated slideInDown" style="line-height: 1.6; list-style: none; padding-left: 0;">
                   <li class="d-flex align-items-start mb-3">
                     <i class="bi bi-lightbulb-fill text-warning me-3"></i>
-                    <span>AI-Powered: Automatically remove unwanted objects and watermarks.</span>
+                    <span>AI-Powered: Automatically remove unwanted objects </span>
                   </li>
                   <li class="d-flex align-items-start mb-3">
                     <i class="bi bi-brush-fill text-success me-3"></i>
