--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta content="Easily remove objects, watermarks, and unwanted people from your photos with our app. Designed for privacy, your photos never leave your device—no cloud uploads, no risk. In just three simple steps, erase distractions and enhance your images like a pro. Our app offers a user-friendly experience, making it perfect for anyone who values both privacy and simplicity in photo editing. Download now to enjoy secure editing.
 
     Features:
-    1.AI-Powered Editing:  remove unwanted objects  with advanced AI technology.
+    1.AI-Powered Editing:  remove unwanted objects with advanced AI technology.
     2.Remove Objects : Eliminate unwanted elements from your photos with precision.
     3.Easy 3-Step Process: Just mark the area, preview, and save—editing has never been easier.
     4.100% Privacy: Your images stay on your device, ensuring maximum privacy and security.
@@ -101,7 +101,7 @@
                 <ul class="text-black mb-4 animated slideInDown" style="line-height: 1.6; list-style: none; padding-left: 0;">
                   <li class="d-flex align-items-start mb-3">
                     <i class="bi bi-lightbulb-fill text-warning me-3"></i>
-                    <span>AI-Powered: Automatically remove unwanted objects </span>
+                    <span>AI-Powered Editing:  remove unwanted objects with advanced AI technology. </span>
                   </li>
                   <li class="d-flex align-items-start mb-3">
                     <i class="bi bi-brush-fill text-success me-3"></i>
