--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>MadEraser- AI Remove Object</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="AI photo editor, Remove objects, Watermark remover, Private editing, No cloud uploads, Image cleanup" name="keywords" />
-    <meta content="Easily remove objects, watermarks, and unwanted people from your photos with our app. Designed for privacy, your photos never leave your device—no cloud uploads, no risk. In just three simple steps, erase distractions and enhance your images like a pro. Our app offers a user-friendly experience, making it perfect for anyone who values both privacy and simplicity in photo editing. Download now to enjoy secure editing.
+    <meta content="AI photo editor, Remove objects,  Private editing, No cloud uploads, Image cleanup" name="keywords" />
+    <meta content="Easily remove objects, and unwanted people from your photos with our app. Designed for privacy, your photos never leave your device—no cloud uploads, no risk. In just three simple steps, erase distractions and enhance your images like a pro. Our app offers a user-friendly experience, making it perfect for anyone who values both privacy and simplicity in photo editing. Download now to enjoy secure editing.
 
     Features:
     1.AI-Powered Editing:  remove unwanted objects with advanced AI technology.
@@ -156,8 +156,6 @@
                   <img class="img-fluid" src="img/3.png" alt="" />
                   <img class="img-fluid" src="img/4.png" alt="" />
                   <img class="img-fluid" src="img/5.png" alt="" />
-                  <img class="img-fluid" src="img/screenshot-3.webp" alt="" />
-                  <img class="img-fluid" src="img/screenshot-4.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-5.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-6.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-7.webp" alt="" />
