--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </ul>
                 <div class="row g-4">
                   <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                    <a class="btn" href="https://apps.apple.com/app/maderaser/id6664059132">
+                    <a class="btn" href="https://apps.apple.com/app/maderaser/id6664059132?utm_source=website&utm_medium=referral&utm_campaign=app_download_campaign&utm_content=banner_button">
                       <img
                         src="img/app-store.png"
                         alt="App Store"
@@ -159,11 +159,11 @@
                 data-wow-delay="0.3s"
               >
                 <div class="owl-carousel screenshot-carousel">
-                  <img class="img-fluid" src="img/1.png" alt="" />
-                  <img class="img-fluid" src="img/2.png" alt="" />
-                  <img class="img-fluid" src="img/3.png" alt="" />
-                  <img class="img-fluid" src="img/4.png" alt="" />
-                  <img class="img-fluid" src="img/5.png" alt="" />
+                  <img class="img-fluid" src="img/1.webp" alt="" />
+                  <img class="img-fluid" src="img/2.webp" alt="" />
+                  <img class="img-fluid" src="img/3.webp" alt="" />
+                  <img class="img-fluid" src="img/4.webp" alt="" />
+                  <img class="img-fluid" src="img/5.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-5.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-6.webp" alt="" />
                   <img class="img-fluid" src="img/screenshot-7.webp" alt="" />
