--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </ul>
                 <div class="row g-4">
                   <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
-                    <a class="btn" href="https://apps.apple.com/app/maderaser/id6664059132?utm_source=website&utm_medium=referral&utm_campaign=app_download_campaign&utm_content=banner_button">
+                    <a class="btn" href="https://apps.apple.com/app/apple-store/id6664059132?pt=127085995&ct=homeweb&mt=8&utm_source=website&utm_medium=referral&utm_campaign=app_download_campaign&utm_content=banner_button">
                       <img
                         src="img/app-store.png"
                         alt="App Store"
