--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,33 +27,68 @@
         p {
             color: #555;
         }
+        .hidden { display: none; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Privacy Policy</h1>
-        <p>Thank you for using our local photo editing application. We are committed to protecting your privacy and ensuring that your data is fully secure. Below is our privacy policy:</p>
+    <div class="container" id="content">
+        <h1 class="lang en">Privacy Policy</h1>
+        <h1 class="lang zh hidden">隐私政策</h1>
+        
+        <p class="lang en">Thank you for using our local photo editing application. We are committed to protecting your privacy and ensuring that your data is fully secure. Below is our privacy policy:</p>
+        <p class="lang zh hidden">感谢您使用我们的本地照片编辑应用程序。我们致力于保护您的隐私，确保您的数据完全安全。以下是我们的隐私政策：</p>
 
-        <h2>1. No Data Collection</h2>
-        <p>We do not collect, store, or share any personal information. Our application is designed to run entirely on your local device, with all photo editing operations processed on your device. Your data remains on your device and is never transmitted to our servers.</p>
+        <h2 class="lang en">1. No Data Collection</h2>
+        <h2 class="lang zh hidden">1. 不收集数据</h2>
+        <p class="lang en">We do not collect, store, or share any personal information. Our application is designed to run entirely on your local device, with all photo editing operations processed on your device. Your data remains on your device and is never transmitted to our servers.</p>
+        <p class="lang zh hidden">我们不收集、存储或共享任何个人信息。我们的应用程序设计为完全在您的本地设备上运行，所有照片编辑操作都在您的设备上处理。您的数据保留在设备上，永远不会传输到我们的服务器。</p>
 
-        <h2>2. No Login Required</h2>
-        <p>Our application does not require any form of login or registration. You can use all features without providing any personal information.</p>
+        <h2 class="lang en">2. No Login Required</h2>
+        <h2 class="lang zh hidden">2. 无需登录</h2>
+        <p class="lang en">Our application does not require any form of login or registration. You can use all features without providing any personal information.</p>
+        <p class="lang zh hidden">我们的应用程序不需要任何形式的登录或注册。您可以在不提供任何个人信息的情况下使用所有功能。</p>
 
-        <h2>3. Internet Connection for Payments and Receipt Verification Only</h2>
-        <p>The application only requires an internet connection when you make an official payment. This connection is used solely to process the payment and verify the receipt with our server. We do not collect or store any payment information; the verification process ensures that your transaction is valid and secure.</p>
+        <h2 class="lang en">3. Internet Connection for Payments and Receipt Verification Only</h2>
+        <h2 class="lang zh hidden">3. 仅在付款和收据验证时需要互联网连接</h2>
+        <p class="lang en">The application only requires an internet connection when you make an official payment. This connection is used solely to process the payment and verify the receipt with our server. We do not collect or store any payment information; the verification process ensures that your transaction is valid and secure.</p>
+        <p class="lang zh hidden">该应用程序仅在您进行官方支付时需要互联网连接。此连接仅用于处理付款并与我们的服务器验证收据。我们不收集或存储任何付款信息；验证过程确保您的交易有效且安全。</p>
 
-        <h2>4. Third-Party Services</h2>
-        <p>For payment processing, we may use third-party service providers. These providers may collect information necessary to complete the transaction, but this information is not stored or processed by us. We recommend reviewing the privacy policies of these providers for more details on how they handle your data.</p>
+        <h2 class="lang en">4. Third-Party Services</h2>
+        <h2 class="lang zh hidden">4. 第三方服务</h2>
+        <p class="lang en">For payment processing, we may use third-party service providers. These providers may collect information necessary to complete the transaction, but this information is not stored or processed by us. We recommend reviewing the privacy policies of these providers for more details on how they handle your data.</p>
+        <p class="lang zh hidden">对于付款处理，我们可能会使用第三方服务提供商。这些提供商可能会收集完成交易所需的信息，但这些信息不会被我们存储或处理。我们建议您查看这些提供商的隐私政策，以获取有关他们如何处理您的数据的更多详细信息。</p>
 
-        <h2>5. Changes to the Privacy Policy</h2>
-        <p>We may update this privacy policy from time to time. Any changes will be reflected on this page, and we encourage you to review it periodically to stay informed about how we are protecting your privacy.</p>
+        <h2 class="lang en">5. Changes to the Privacy Policy</h2>
+        <h2 class="lang zh hidden">5. 隐私政策的更改</h2>
+        <p class="lang en">We may update this privacy policy from time to time. Any changes will be reflected on this page, and we encourage you to review it periodically to stay informed about how we are protecting your privacy.</p>
+        <p class="lang zh hidden">我们可能会不时更新此隐私政策。任何更改将反映在此页面上，我们鼓励您定期查看，以了解我们如何保护您的隐私。</p>
 
-        <h2>6. Contact Us</h2>
-        <p>If you have any questions or concerns about our privacy policy, please feel free to contact us at:</p>
-        <p>Email: <a href="mailto:support@youremail.com">support@uopensail.com</a></p>
+        <h2 class="lang en">6. Contact Us</h2>
+        <h2 class="lang zh hidden">6. 联系我们</h2>
+        <p class="lang en">If you have any questions or concerns about our privacy policy, please feel free to contact us at:</p>
+        <p class="lang zh hidden">如果您对我们的隐私政策有任何疑问或担忧，请随时通过以下方式与我们联系：</p>
+        <p class="lang en">Email: <a href="mailto:support@uopensail.com">support@uopensail.com</a></p>
+        <p class="lang zh hidden">电子邮件: <a href="mailto:support@uopensail.com">support@uopensail.com</a></p>
 
-        <p>We appreciate your trust in using our application.</p>
+        <p class="lang en">We appreciate your trust in using our application.</p>
+        <p class="lang zh hidden">感谢您对我们应用程序的信任。</p>
     </div>
+
+    <script>
+        // 获取用户的语言
+        const userLang = navigator.language || navigator.userLanguage; 
+        const lang = userLang.split('-')[0]; // 获取主要语言代码，例如 "en"
+
+        // 根据语言显示相应的文本
+        const elements = document.querySelectorAll('.lang');
+        console.log("xx:",elements, userLang);
+        elements.forEach(el => {
+            if (el.classList.contains(lang)) {
+                el.classList.remove('hidden');
+            } else {
+                el.classList.add('hidden');
+            }
+        });
+    </script>
 </body>
 </html>
