--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MadEraser- AI Remove Object</title>
+    <title>Objects Removal- AI Remove Object</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="AI photo editor, Remove objects,  Private editing, No cloud uploads, Image cleanup" name="keywords" />
     <meta content="Easily remove objects, and unwanted people from your photos with our app. Designed for privacy, your photos never leave your device—no cloud uploads, no risk. In just three simple steps, erase distractions and enhance your images like a pro. Our app offers a user-friendly experience, making it perfect for anyone who values both privacy and simplicity in photo editing. Download now to enjoy secure editing.
@@ -79,7 +79,7 @@
           class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
         >
           <a href="" class="navbar-brand p-0">
-            <h1 class="m-0">MadEraser</h1>
+            <h1 class="m-0">Objects Removal</h1>
             <!-- <img src="img/logo.png" alt="Logo"> -->
           </a>
           <button
