--- a/terms-use.html
+++ b/terms-use.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Objects Removal Terms of Use - User Agreement</title>
+    <title>Remove BG-(AI Auto Cutout) Terms of Use - User Agreement</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -50,7 +50,7 @@
 
 <body>
     <div class="lang en container" id="content">
-        <h1>Objects Removal Terms of Use</h1>
+        <h1>Remove BG-(AI Auto Cutout) Terms of Use</h1>
         <h2>User Agreement</h2>
 
         <p>(hereinafter referred to as "the company") provides information and products in accordance with the following
