--- a/terms-use.html
+++ b/terms-use.html
@@ -156,7 +156,7 @@
 
     </div>
     <div class="lang zh hidden container" id="content">
-        <h1>对象移除使用条款</h1>
+        <h1>使用条款</h1>
 
         <h2>用户协议</h2>
         <p>（以下称“公司”）根据以下条款和条件提供信息和产品，您在本协议中也可能被称为“用户”，以下所述的条款和条件构成您与公司之间关于您使用所提供信息的完整协议（以下称“本协议”）。</p>
